tests/qd/errors/division_zero.qd
// Test that division by zero aborts with error message
fn main( -- ) {
    1 0 div
}
